--- a/package.json
+++ b/package.json
@@ -16,6 +16,16 @@
       },
       {
         "type": "vis",
+        "id": "altsplice-isoforms",
+        "name": "Alternative Splicing - IsoForms",
+        "size": [840,300],
+        "filter": "genomeDataLink",
+        "folder" : "caleydo-altsplice",
+        "module" : "caleydo-altsplice/altsplice-isoforms"
+
+      },
+      {
+        "type": "vis",
         "id": "altsplice-junctions",
         "name": "Alternative Splicing - Junctions",
         "size": [840,2000],
