prepare for publishing

--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
         }
       }
     }
+  },
+  "publishConfig": {
+    "registry": "http://dev.caleydo.org/nexus/content/repositories/caleydo-web/"
   }
 }
