mark peer Dependencies as real dependencies, too

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "vials",
   "version": "0.0.1",
   "dependencies": {
+    "caleydo_web": "*"
+  },
+  "peerDependencies": {
+    "caleydo_web": "*"
   },
   "caleydo": {
     "plugins": {
