--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "vials",
   "version": "0.0.1",
   "dependencies": {
-    "caleydo_web": "*"
+    "caleydo_core": "*"
   },
   "peerDependencies": {
-    "caleydo_web": "*"
+    "caleydo_core": "*"
   },
   "caleydo": {
     "plugins": {
