--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "vials",
   "version": "0.0.1",
+  "license" : "SEE LICENSE IN LICENSE",
+  "repository": "Caleydo/vials",
   "dependencies": {
   },
   "peerDependencies": {
