changed data loading signal towards new junction view

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
             2000
           ],
           "filter": "caleydo-genome-data-link",
-          "file": "vials-junctions"
+          "file": "vials-junctions-v2"
         },
         {
           "type": "vis",
