--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
         "d3": "~3.5.5",
         "js-lru": "http://github.com/rsms/js-lru.git",
         "bootstrap": "~3",
-        "underscore":"~1.8"
+        "underscore":"~1.8",
+        "fontawesome":"~4"
       }
     },
     "requirejs-config": {
