--- a/package.json
+++ b/package.json
@@ -76,6 +76,6 @@
     }
   },
   "publishConfig": {
-    "registry": "http://dev.caleydo.org/nexus/content/repositories/caleydo-web/"
+    "registry": "http://registry.caleydo.org/"
   }
 }
