--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
         "js-lru": "http://github.com/rsms/js-lru.git",
         "bootstrap": "~3",
         "underscore":"~1.8",
-        "font-awesome":"~4"
+        "font-awesome":">=4.3.0"
       }
     },
     "requirejs-config": {
