bugfixes and started new reads view for V 1.5

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
             2000
           ],
           "filter": "caleydo-genome-data-link",
-          "file": "vials-read"
+          "file": "vials-read-v2"
         },
         {
           "type": "app",
