grouping in reads started for V 1.5

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
         "js-lru": "http://github.com/rsms/js-lru.git",
         "bootstrap": "~3",
         "underscore":"~1.8",
+        "lodash":">=3.10",
         "font-awesome":">=4.3.0",
         "jquery":">=1.11.0",
         "selectivity":">=2.0"
