--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vials",
-  "title"" "VIALS",
+  "title": "VIALS",
   "description": "Vials visualizes alternative splicing based on mRNAseq data.",
   "version": "0.1.5",
   "license" : "SEE LICENSE IN LICENSE",
