--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/jasmine": "^2.5.35",
     "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.25.0",
+    "extract-loader": "0.0.2",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
