--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -3,7 +3,7 @@
     "type": "app",
     "name": "vials",
     "author": "The Caleydo Team",
-    "githubAccount": "phovea",
+    "githubAccount": "caleydo",
     "modules": [
       "phovea_d3",
       "phovea_core"
