--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "compile": "tsc",
     "lint": "tslint -c tslint.json src/**.ts tests/**.ts",
     "docs": "typedoc --options typedoc.json src/**.ts",
-    "prebuild": "npm run test",
+    "prebuild": "node -e \"process.exit(process.env.PHOVEA_SKIP_TESTS === undefined?1:0)\" || npm run test",
     "pretest": "npm run compile",
     "test": "karma start",
     "posttest": "npm run lint",
@@ -28,59 +28,61 @@
     "release:major": "npm version major && npm publish && git push --follow-tags",
     "release:minor": "npm version minor && npm publish && git push --follow-tags",
     "release:patch": "npm version patch && npm publish && git push --follow-tags",
-    "predist": "npm run build",
-    "dist": "mkdirp dist && cd build && tar cvzf ../dist/vials.tar.gz *"
+    "predist": "npm run build && npm run docs",
+    "dist": "mkdirp dist && cd build && tar cvzf ../dist/vials.tar.gz *",
+    "predocker": "npm run build",
+    "docker": "docker build -t vials -f deploy/Dockerfile ."
   },
   "devDependencies": {
-    "@types/jasmine": "^2.5.35",
-    "awesome-typescript-loader": "^2.2.4",
-    "css-loader": "^0.25.0",
+    "@types/jasmine": "2.5.35",
+    "awesome-typescript-loader": "2.2.4",
+    "css-loader": "0.25.0",
     "extract-loader": "0.0.2",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.4",
-    "imports-loader": "^0.6.5",
-    "jasmine": "^2.5.2",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-junit-reporter": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^3.10.0",
-    "null-loader": "^0.1.1",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.0.2",
-    "style-loader": "^0.13.1",
-    "tslint": "^3.15.1",
-    "typedoc": "^0.5.1",
-    "typescript": "^2.0.6",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.26",
-    "webpack-dev-server": "^2.1.0-beta.10"
+    "extract-text-webpack-plugin": "2.0.0-beta.4",
+    "file-loader": "0.9.0",
+    "html-loader": "0.4.4",
+    "imports-loader": "0.6.5",
+    "jasmine": "2.5.2",
+    "json-loader": "0.5.4",
+    "karma": "1.3.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-jasmine": "1.0.2",
+    "karma-junit-reporter": "1.1.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
+    "mkdirp": "0.5.1",
+    "node-sass": "3.10.0",
+    "null-loader": "0.1.1",
+    "raw-loader": "0.5.1",
+    "sass-loader": "4.0.2",
+    "style-loader": "0.13.1",
+    "tslint": "3.15.1",
+    "typedoc": "0.5.3",
+    "typescript": "2.0.6",
+    "url-loader": "0.5.7",
+    "webpack": "2.1.0-beta.26",
+    "webpack-dev-server": "2.1.0-beta.10"
   },
   "dependencies": {
-    "@types/bootstrap": "^3.3.32",
-    "@types/d3": "^3.5.36",
-    "@types/jquery": "^2.0.33",
-    "@types/lodash": "^4.14.38",
-    "bootstrap-sass": "^3.3.7",
-    "d3": "^3.5.17",
-    "font-awesome": "^4.6.3",
-    "jquery": "^3.1.1",
-    "lodash": "^4.16.6",
+    "@types/bootstrap": "3.3.32",
+    "@types/d3": "3.5.36",
+    "@types/jquery": "2.0.33",
+    "@types/lodash": "4.14.38",
+    "bootstrap-sass": "3.3.7",
+    "d3": "3.5.17",
+    "font-awesome": "4.6.3",
+    "jquery": "3.1.1",
+    "lodash": "4.16.6",
     "lru-fast": "github:sgratzl/js-lru",
-    "phovea_core": "github:phovea/phovea_core",
-    "phovea_d3": "github:phovea/phovea_d3",
-    "selectivity": "^3.0.0"
+    "phovea_core": "github:phovea/phovea_core#v0.0.5",
+    "phovea_d3": "github:phovea/phovea_d3#v0.0.5",
+    "selectivity": "3.0.0"
   },
   "name": "vials",
   "description": "Vials is a Phovea application for visualizing alternative splicing based on mRNAseq data.",
   "homepage": "http://vials.io",
-  "version": "0.0.1",
+  "version": "1.5.1",
   "author": {
     "name": "The Caleydo Team",
     "email": "contact@caleydo.org",
@@ -94,5 +96,5 @@
     "type": "git",
     "url": "https://github.com/caleydo/vials.git"
   },
-  "main": "build/vials.js"
+  "private": true
 }
