--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,21 @@
   "compilerOptions": {
     "module": "es6",
     "target": "es5",
-    "noImplicitAny": false,
+    "importHelpers": true,
     "sourceMap": true,
     "moduleResolution": "node",
+    "jsx": "react",
+    "experimentalDecorators": true,
     "lib": [
       "dom",
       "es2015"
     ],
-    "baseUrl": "../"
+    "baseUrl": "../",
+    "noImplicitAny": false
   },
   "include": [
     "src/**/*.ts",
+    "src/**/*.tsx",
     "tests/**/*.ts",
     "index.ts",
     "tsd.d.ts"
