--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/d3": "3.5.36",
     "@types/jquery": "2.0.33",
     "@types/lodash": "4.14.38",
+    "@types/handlebars": "4.0.33",
     "bootstrap-sass": "3.3.7",
     "d3": "3.5.17",
     "font-awesome": "4.6.3",
